--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Recepten</title>
+<link rel="stylesheet" href="default.css">
 </head>
 <body>
 	<h1>Recepten</h1>
@@ -11,6 +12,7 @@
 			<li><a href="pannenkoeken.html">Pannenkoeken</a></li>
 			<li><a href="wafels.html">Wafels</a></li>
 			<li><a href="oliebollen.html">Oliebollen</a></li>
+			<li><a href="mattentaart.html">Mattentaart</a></li>
 		</ul>
 	</nav>
 </body>
